watch/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  serviceName: jellyfin
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeName: nereid-1
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.9.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
          resources:
            requests:
              cpu: "8"
              memory: 16Gi
            limits:
              cpu: "12"
              memory: 20Gi
          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /cache
              name: jellyfin-cache
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-cache
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
