watch/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: watch.super.fish
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
  tls:
    - hosts:
        - watch.super.fish
      secretName: watch.super.fish
